# diplomski

./: README.md
Files for parsing/: test2.txt
Haskell/: Haskell.cabal
Haskell/app/: Main.hs
Haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Haskell/dist-newstyle/packagedb/ghc-9.2.5/: Haskell-0.1.0.0-inplace.conf  package.cache
Haskell/resources/: jsonMarc.json  test1 copy.txt  test1.txt  test4.txt
Haskell/src/: Parser.hs
Java/FxForm/: pom.xml
Java/FxForm/src/main/java/: module-info.java
Java/FxForm/src/main/java/com/example/fxform/: HelloApplication.java  HelloController.java
Java/FxForm/src/main/java/com/example/fxform/model/: ControlField.java  DataField.java  FieldType.java  JsonMessage.java  Leader.java  Marc.java  MarcLine.java  SubField.java
Java/FxForm/src/main/resources/com/example/fxform/: hello-view.fxml
