cabal-version:      2.4
name:               Haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             mjovetic16
maintainer:         mjovetic16@raf.rs

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib, Parser

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.12.0.0,
        directory,
        scotty >=0.12.1,
        parsec

    hs-source-dirs:   src
    default-language: Haskell2010

executable Haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.12.0.0,
        Haskell,
        scotty,
        text,
        aeson,
        mtl

    hs-source-dirs:   app
    default-language: Haskell2010
